// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Like Button LikeButton checked renderer without crashing 1`] = `
<div
  className="sc-bwzfXH gICfuL"
>
  <svg
    className="sc-bdVaJa gIBVkN"
    onClick={[Function]}
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M12 21.35l-1.45-1.32c-5.15-4.67-8.55-7.75-8.55-11.53 0-3.08 2.42-5.5 5.5-5.5 1.74 0 3.41.81 4.5 2.09 1.09-1.28 2.76-2.09 4.5-2.09 3.08 0 5.5 2.42 5.5 5.5 0 3.78-3.4 6.86-8.55 11.54l-1.45 1.31z"
    />
  </svg>
</div>
`;

exports[`Like Button LikeButton default renderer without crashing 1`] = `
<div
  className="sc-bwzfXH gICfuL"
>
  <svg
    className="sc-bdVaJa dUXLKb"
    onClick={undefined}
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M12 21.35l-1.45-1.32c-5.15-4.67-8.55-7.75-8.55-11.53 0-3.08 2.42-5.5 5.5-5.5 1.74 0 3.41.81 4.5 2.09 1.09-1.28 2.76-2.09 4.5-2.09 3.08 0 5.5 2.42 5.5 5.5 0 3.78-3.4 6.86-8.55 11.54l-1.45 1.31z"
    />
  </svg>
</div>
`;
